--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
-<!DOCTYPE html><html lang="bn">
+<!DOCTYPE html>
+<html lang="bn">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Crunchyroll Premium BD Shop</title>
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
-    body { font-family: 'Segoe UI', sans-serif; background-color: #fdfcfb; margin: 0; padding: 0; }
-    header { background-color: #ff6600; color: white; text-align: center; padding: 20px 0; font-size: 28px; }
-    .container { max-width: 700px; margin: 30px auto; background: #fff; padding: 25px; border-radius: 10px; box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); }
-    input, select, button { width: 100%; padding: 10px; margin: 10px 0 20px; border: 1px solid #ccc; border-radius: 8px; }
-    button { background-color: #ff6600; color: white; font-size: 16px; cursor: pointer; }
-    button:hover { background-color: #e65c00; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #fdfcfb;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #ff6600;
+      color: white;
+      text-align: center;
+      padding: 20px 0;
+      font-size: 28px;
+    }
+    .container {
+      max-width: 700px;
+      margin: 30px auto;
+      background: #fff;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
+    h3 {
+      color: #ff6600;
+    }
+    label {
+      font-weight: bold;
+    }
+    input, select {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0 20px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+    button {
+      background-color: #ff6600;
+      color: white;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      width: 100%;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #e65c00;
+    }
   </style>
 </head>
 <body>
@@ -18,30 +59,87 @@
   <div class="container">
     <form id="orderForm">
       <h3>🧾 বিলিং এড্রেস</h3>
-      <input type="text" name="name" placeholder="আপনার নাম *" required>
-      <input type="email" name="email" placeholder="ইমেইল *" required>
-      <input type="text" name="address" placeholder="ঠিকানা *" required>
-      <input type="text" name="mobile" placeholder="মোবাইল নাম্বার *" required><h3>📦 প্যাকেজ</h3>
-  <select name="package">
-    <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
-    <option value="3 Months Personal – 720 TK">3 Months Personal – 720 TK</option>
-  </select>
+      <label>Full Name *</label>
+      <input type="text" name="name" required>
+      <label>Email *</label>
+      <input type="email" name="email" required>
+      <label>Street Address *</label>
+      <input type="text" name="address" required>
+      <label>Mobile Number *</label>
+      <input type="text" name="mobile" required>
 
-  <h3>💳 পেমেন্ট</h3>
-  <input type="text" name="payment_number" placeholder="পেমেন্ট নাম্বার *" required>
-  <input type="text" name="trans_id" placeholder="ট্রানজেকশন আইডি *" required>
-  <select name="payment_method">
-    <option value="Bkash">Bkash</option>
-    <option value="Nagad">Nagad</option>
-    <option value="Rocket">Rocket</option>
-  </select>
+      <h3>📦 প্যাকেজ সিলেকশন</h3>
+      <label>Crunchyroll Share Account ⚡</label>
+      <select name="package">
+        <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
+        <option value="2 Months Share – 200 TK">2 Months – 200 TK</option>
+        <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
+        <option value="6 Months Share – 600 TK">6 Months – 600 TK</option>
+        <option value="8 Months Share – 840 TK">8 Months – 840 TK</option>
+      </select>
 
-  <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
-</form>
+      <label>Crunchyroll Personal Profile ⚡</label>
+      <select name="personal_package">
+        <option value="1 Month Personal – 240 TK">1 Month – 240 TK</option>
+        <option value="2 Months Personal – 480 TK">2 Months – 480 TK</option>
+        <option value="3 Months Personal – 720 TK">3 Months – 720 TK</option>
+        <option value="6 Months Personal – 1440 TK">6 Months – 1440 TK</option>
+        <option value="8 Months Personal – 1800 TK">8 Months – 1800 TK</option>
+        <option value="12 Months Personal – 2760 TK">12 Months – 2760 TK</option>
+      </select>
 
-  </div>  <!-- Firebase Integration -->  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js";
+      <label>Crunchyroll Primary Account ⚡</label>
+      <select name="primary_package">
+        <option value="1 Month Primary – 650 TK">1 Month – 650 TK</option>
+        <option value="2 Months Primary – 1300 TK">2 Months – 1300 TK</option>
+        <option value="3 Months Primary – 1950 TK">3 Months – 1950 TK</option>
+        <option value="6 Months Primary – 3600 TK">6 Months – 3600 TK</option>
+      </select>
+
+      <h3>💳 পেমেন্ট তথ্য</h3>
+      <label>Payment Number *</label>
+      <input type="text" name="payment_number" required>
+      <label>Transaction ID *</label>
+      <input type="text" name="trans_id" required>
+      <label>Payment Method *</label>
+      <select name="payment_method" required>
+        <option value="Bkash">Bkash</option>
+        <option value="Nagad">Nagad</option>
+        <option value="Rocket">Rocket</option>
+      </select>
+
+      <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
+    </form>
+  </div>
+
+  <!-- EmailJS -->
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script>
+    (function() {
+      emailjs.init("SsUmUorUm-BZG8LBY");
+    })();
+
+    document.getElementById("orderForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+
+      const form = this;
+
+      emailjs.sendForm("service_z1714kq", "template_hp66tqp", form)
+        .then(() => {
+          alert("✅ অর্ডার সফলভাবে পাঠানো হয়েছে! আপনি শীঘ্রই ইমেইল পাবেন।");
+          form.reset();
+        })
+        .catch((error) => {
+          alert("❌ অর্ডার ব্যর্থ হয়েছে! অনুগ্রহ করে পরে আবার চেষ্টা করুন।");
+          console.error("EmailJS Error:", error);
+        });
+    });
+  </script>
+
+  <!-- Firebase Visitor Counter -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
@@ -49,46 +147,25 @@
       projectId: "crunchyrollpremiumbd-shop",
       storageBucket: "crunchyrollpremiumbd-shop.appspot.com",
       messagingSenderId: "790961397898",
-      appId: "1:790961397898:web:1c5fceb8b5d3340c3bcd73",
-      measurementId: "G-PSSPTLC6MJ"
+      appId: "1:790961397898:web:1c5fceb8b5d3340c3bcd73"
     };
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
-    emailjs.init("SsUmUorUm-BZG8LBY");
-
-    document.getElementById("orderForm").addEventListener("submit", async function(e) {
-      e.preventDefault();
-      const form = this;
-
-      // 1. EmailJS to send email
-      emailjs.sendForm("service_z1714kq", "template_hp66tqp", form)
-        .then(() => {
-          alert("✅ অর্ডার সফলভাবে পাঠানো হয়েছে! আপনি শীঘ্রই ইমেইল পাবেন।");
-        })
-        .catch((error) => {
-          alert("❌ ইমেইল পাঠাতে সমস্যা হয়েছে");
-          console.error("EmailJS Error:", error);
-        });
-
-      // 2. Firebase to store order
+    // ✅ Visitor Counter (count only once using localStorage)
+    const hasVisited = localStorage.getItem("hasVisited");
+    if (!hasVisited) {
       try {
-        await addDoc(collection(db, "orders"), {
-          name: form.name.value,
-          email: form.email.value,
-          address: form.address.value,
-          mobile: form.mobile.value,
-          package: form.package.value,
-          payment_number: form.payment_number.value,
-          trans_id: form.trans_id.value,
-          payment_method: form.payment_method.value,
+        await addDoc(collection(db, "visitors"), {
           timestamp: serverTimestamp()
         });
-        form.reset();
+        localStorage.setItem("hasVisited", "true");
+        console.log("✅ New visitor added");
       } catch (err) {
-        console.error("Firebase Error:", err);
+        console.error("❌ Visitor add error", err);
       }
-    });
-  </script></body>
+    }
+  </script>
+</body>
 </html>
