--- a/admin.html
+++ b/admin.html
@@ -6,41 +6,71 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f9f9f9;
-      padding: 20px;
-      color: #333;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 0;
     }
-    .panel {
-      max-width: 600px;
-      margin: 0 auto;
+    header {
+      background-color: #ff6600;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      font-size: 28px;
+    }
+    .container {
+      max-width: 700px;
+      margin: 30px auto;
       background: #fff;
       padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.05);
-      text-align: center;
-    }
-    h1 {
-      color: #ff6600;
-    }
-    .info-box {
-      margin-top: 20px;
-      font-size: 22px;
-      padding: 15px;
-      background: #f1f1f1;
       border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
+    h2 {
+      text-align: center;
+      color: #333;
+    }
+    .stats {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 30px;
+    }
+    .card {
+      background-color: #ff6600;
+      color: white;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      flex: 1;
+      margin: 10px;
+    }
+    .card h3 {
+      font-size: 20px;
+      margin: 10px 0;
+    }
+    .card span {
+      font-size: 28px;
+      font-weight: bold;
     }
   </style>
-  <!-- Firebase CDN -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
 </head>
 <body>
-  <div class="panel">
-    <h1>📊 এডমিন প্যানেল</h1>
-    <div class="info-box">মোট অর্ডার: <span id="orderCount">লোড হচ্ছে...</span></div>
-    <div class="info-box">মোট ইউজার (ভিজিটর): <span id="visitorCount">লোড হচ্ছে...</span></div>
-  </div>  <script>
-    // Firebase config
+  <header>এডমিন প্যানেল</header>
+  <div class="container">
+    <h2>সাম্প্রতিক তথ্যা প্রদর্শক</h2>
+    <div class="stats">
+      <div class="card">
+        <h3>🏠 মোট ইউজার</h3>
+        <span id="totalUsers">0</span>
+      </div>
+      <div class="card">
+        <h3>📅 মোট অর্ডার</h3>
+        <span id="totalOrders">0</span>
+      </div>
+    </div>
+  </div>  <!-- Firebase SDK -->  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
     const firebaseConfig = {
       apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
       authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
@@ -51,25 +81,17 @@
       measurementId: "G-PSSPTLC6MJ"
     };
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-    async function updateCounts() {
-      try {
-        const ordersSnap = await db.collection('orders').get();
-        document.getElementById('orderCount').textContent = ordersSnap.size;
+    async function loadStats() {
+      const visitorsSnapshot = await getDocs(collection(db, "visitors"));
+      const ordersSnapshot = await getDocs(collection(db, "orders"));
 
-        const visitorsSnap = await db.collection('visitors').get();
-        const uniqueIps = new Set();
-        visitorsSnap.forEach(doc => uniqueIps.add(doc.data().ip));
-        document.getElementById('visitorCount').textContent = uniqueIps.size;
-      } catch (err) {
-        document.getElementById('orderCount').textContent = 'ত্রুটি';
-        document.getElementById('visitorCount').textContent = 'ত্রুটি';
-        console.error("🔥 Firebase Error:", err);
-      }
+      document.getElementById("totalUsers").textContent = visitorsSnapshot.size;
+      document.getElementById("totalOrders").textContent = ordersSnapshot.size;
     }
 
-    updateCounts();
+    loadStats();
   </script></body>
 </html>
