--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 </head>
 <body>
   <header>
-    <img src="https://i.ibb.co/wKdT2q3/anime-logo.png" alt="Anime Logo">
+    <img src="https://imgur.com/a/O7fFGLP" alt="Anime Logo">
     <span>Crunchyroll Premium BD Shop</span>
   </header>  <div class="container" id="signup">
     <h2>🔐 সাইন আপ</h2>
