--- a/index.html
+++ b/index.html
@@ -10,18 +10,7 @@
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f9f9f9;
-    }
-    header {
-      background-color: #ff6600;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    header img {
-      height: 50px;
-      vertical-align: middle;
-      margin-right: 10px;
+      background-color: #f4f4f4;
     }
     .container {
       max-width: 600px;
@@ -29,7 +18,7 @@
       background: white;
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     h2 {
       text-align: center;
@@ -50,110 +39,115 @@
     button:hover {
       background-color: #e65c00;
     }
-    .whatsapp-btn {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background-color: #25D366;
-      color: white;
-      padding: 15px;
-      border-radius: 50%;
-      font-size: 24px;
-      text-align: center;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
-      text-decoration: none;
+    .package-info {
+      margin: 10px 0;
+      padding: 10px;
+      background: #fff0e6;
+      border-radius: 8px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="https://imgur.com/a/O7fFGLP" alt="Anime Logo">
-    <span>Crunchyroll Premium BD Shop</span>
-  </header>  <div class="container" id="signup">
-    <h2>🔐 সাইন আপ</h2>
-    <input type="email" id="signupEmail" placeholder="ইমেইল" required>
-    <input type="text" id="signupPhone" placeholder="মোবাইল নম্বর" required>
-    <input type="password" id="signupPassword" placeholder="পাসওয়ার্ড" required>
-    <input type="password" id="signupConfirm" placeholder="কনফার্ম পাসওয়ার্ড" required>
-    <input type="text" id="signupCity" placeholder="শহর" required>
-    <button onclick="handleSignup()">সাইন আপ করুন</button>
-  </div>  <div class="container" id="login" style="display: none">
-    <h2>🔓 সাইন ইন</h2>
-    <input type="email" id="loginEmail" placeholder="ইমেইল" required>
-    <input type="password" id="loginPassword" placeholder="পাসওয়ার্ড" required>
-    <button onclick="handleLogin()">সাইন ইন করুন</button>
-  </div>  <section id="mainWebsite" class="container" style="display: none">
-    <h2>🎉 Crunchyroll Premium BD Shop</h2>
-    <form id="orderForm">
-      <input type="text" name="name" placeholder="Full Name" required>
-      <input type="email" name="email" placeholder="Email" required>
-      <input type="text" name="address" placeholder="Street Address" required>
-      <input type="text" name="mobile" placeholder="Mobile Number" required>
-      <select name="package">
-        <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
-        <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
-      </select>
-      <input type="text" name="payment_number" placeholder="Payment Number" required>
-      <input type="text" name="trans_id" placeholder="Transaction ID" required>
-      <select name="payment_method" required>
-        <option value="Bkash">Bkash</option>
-        <option value="Nagad">Nagad</option>
-      </select>
-      <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
-    </form>
-  </section><a class="whatsapp-btn" href="https://wa.me/8801305736690" target="_blank">💬</a>
+<div class="container" id="signup">
+  <h2>🔐 সাইন আপ</h2>
+  <input type="email" id="signupEmail" placeholder="ইমেইল" required>
+  <input type="text" id="signupPhone" placeholder="মোবাইল নম্বর" required>
+  <input type="password" id="signupPassword" placeholder="পাসওয়ার্ড" required>
+  <input type="password" id="signupConfirm" placeholder="কনফার্ম পাসওয়ার্ড" required>
+  <input type="text" id="signupCity" placeholder="শহর" required>
+  <button onclick="handleSignup()">সাইন আপ করুন</button>
+</div>
+<div class="container" id="login" style="display: none">
+  <h2>🔓 সাইন ইন</h2>
+  <input type="email" id="loginEmail" placeholder="ইমেইল" required>
+  <input type="password" id="loginPassword" placeholder="পাসওয়ার্ড" required>
+  <button onclick="handleLogin()">সাইন ইন করুন</button>
+</div>
+<section id="mainWebsite" class="container" style="display: none">
+  <h2>🎉 Crunchyroll Premium BD Shop</h2>  <div class="package-info" id="dynamicContent">
+    🔄 ওয়েবসাইট তথ্য লোড হচ্ছে...
+  </div>  <form id="orderForm">
+    <input type="text" name="name" placeholder="Full Name" required>
+    <input type="email" name="email" placeholder="Email" required>
+    <input type="text" name="address" placeholder="Street Address" required>
+    <input type="text" name="mobile" placeholder="Mobile Number" required>
+    <select name="package">
+      <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
+      <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
+    </select>
+    <input type="text" name="payment_number" placeholder="Payment Number" required>
+    <input type="text" name="trans_id" placeholder="Transaction ID" required>
+    <select name="payment_method" required>
+      <option value="Bkash">Bkash</option>
+      <option value="Nagad">Nagad</option>
+    </select>
+    <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
+  </form>
+</section><script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
+    authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
+    projectId: "crunchyrollpremiumbd-shop"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
-      authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
-      projectId: "crunchyrollpremiumbd-shop",
-    };
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-
-    function handleSignup() {
-      const email = document.getElementById("signupEmail").value;
-      const phone = document.getElementById("signupPhone").value;
-      const pass = document.getElementById("signupPassword").value;
-      const confirm = document.getElementById("signupConfirm").value;
-      const city = document.getElementById("signupCity").value;
-      if (pass !== confirm) return alert("Password মিলছে না");
-
-      db.collection("users").add({
-        email, phone, city,
-        timestamp: firebase.firestore.FieldValue.serverTimestamp()
-      }).then(() => {
-        alert("সাইন আপ সফল! এখন লগইন করুন।");
-        document.getElementById("signup").style.display = "none";
-        document.getElementById("login").style.display = "block";
-      });
+  // Load siteSettings
+  db.collection("siteSettings").doc("main").get().then(doc => {
+    if (doc.exists) {
+      const data = doc.data();
+      document.getElementById("dynamicContent").innerHTML = `
+        📦 <strong>প্যাকেজ:</strong> ${data.package || 'নেই'}<br>
+        💳 <strong>পেমেন্ট নাম্বার:</strong> ${data.payment_number || 'নেই'}<br>
+        🧾 <strong>পেমেন্ট মেথড:</strong> ${data.payment_method || 'নেই'}
+      `;
+    } else {
+      document.getElementById("dynamicContent").innerText = "কোন তথ্য পাওয়া যায়নি";
     }
+  });
 
-    function handleLogin() {
-      const email = document.getElementById("loginEmail").value;
-      const pass = document.getElementById("loginPassword").value;
+  function handleSignup() {
+    const email = document.getElementById("signupEmail").value;
+    const phone = document.getElementById("signupPhone").value;
+    const pass = document.getElementById("signupPassword").value;
+    const confirm = document.getElementById("signupConfirm").value;
+    const city = document.getElementById("signupCity").value;
+    if (pass !== confirm) return alert("Password মিলছে না");
 
-      db.collection("users").where("email", "==", email).get().then(snapshot => {
-        if (snapshot.empty) return alert("ইউজার পাওয়া যায়নি!");
-        document.getElementById("login").style.display = "none";
-        document.getElementById("mainWebsite").style.display = "block";
-      });
-    }
-
-    document.getElementById("orderForm").addEventListener("submit", function(e) {
-      e.preventDefault();
-      const formData = new FormData(this);
-      const order = {};
-      formData.forEach((v, k) => order[k] = v);
-      order.timestamp = firebase.firestore.FieldValue.serverTimestamp();
-
-      db.collection("orders").add(order).then(() => {
-        alert("✅ অর্ডার কনফার্ম হয়েছে!");
-        document.getElementById("orderForm").reset();
-      }).catch(err => {
-        alert("❌ অর্ডার ব্যর্থ হয়েছে");
-      });
+    db.collection("users").add({
+      email, phone, city,
+      timestamp: firebase.firestore.FieldValue.serverTimestamp()
+    }).then(() => {
+      alert("সাইন আপ সফল! এখন লগইন করুন।");
+      document.getElementById("signup").style.display = "none";
+      document.getElementById("login").style.display = "block";
     });
-  </script></body>
+  }
+
+  function handleLogin() {
+    const email = document.getElementById("loginEmail").value;
+    const pass = document.getElementById("loginPassword").value;
+
+    db.collection("users").where("email", "==", email).get().then(snapshot => {
+      if (snapshot.empty) return alert("ইউজার পাওয়া যায়নি!");
+      document.getElementById("login").style.display = "none";
+      document.getElementById("mainWebsite").style.display = "block";
+    });
+  }
+
+  document.getElementById("orderForm").addEventListener("submit", function(e) {
+    e.preventDefault();
+    const formData = new FormData(this);
+    const order = {};
+    formData.forEach((v, k) => order[k] = v);
+    order.timestamp = firebase.firestore.FieldValue.serverTimestamp();
+
+    db.collection("orders").add(order).then(() => {
+      alert("✅ অর্ডার কনফার্ম হয়েছে!");
+      document.getElementById("orderForm").reset();
+    }).catch(err => {
+      alert("❌ অর্ডার ব্যর্থ হয়েছে");
+    });
+  });
+</script></body>
 </html>
